# soroban-block-explorer

./: .env.example  .gitignore  .prettierignore  CLAUDE.md  Cargo.toml  README.md  docker-compose.yml  eslint.config.mjs  nx.json  package-lock.json  package.json  tsconfig.base.json  tsconfig.json
.claude/: settings.json
.claude/skills/branch/: SKILL.md
.claude/skills/pr/: SKILL.md
.claude/skills/promote-task/: SKILL.md
.github/workflows/: ci.yml  deploy-board.yml  deploy-staging.yml
.husky/: pre-commit
apps/api/: package.json
apps/api/src/: app.module.ts  health.controller.ts  main.ts  workspace-imports.ts
apps/indexer/: package.json
apps/indexer/crates/xdr-parser/: Cargo.toml
apps/indexer/crates/xdr-parser/src/: ledger.rs  lib.rs  transaction.rs  types.rs
apps/web/: README.md  package.json  tsconfig.lib.json  vite.config.ts
apps/workers/: package.json
crates/api/: Cargo.toml
crates/api/src/: config.rs  main.rs
crates/api/src/openapi/: mod.rs  schemas.rs
crates/backfill-bench/: Cargo.toml  README.md
crates/backfill-bench/src/: main.rs
crates/db/: Cargo.toml  MIGRATIONS.md
crates/db-migrate/: Cargo.toml
crates/db-migrate/src/: main.rs
crates/db-partition-mgmt/: Cargo.toml
crates/db-partition-mgmt/src/: main.rs
crates/db/migrations/: 0001_create_ledgers_transactions.sql  0002_create_operations.sql  0003_create_soroban_contracts.sql  0004_create_soroban_activity_tables.sql  0005_create_accounts_tokens.sql  0006_create_nfts_pools_snapshots.sql  0007_idempotent_write_constraints.sql  0008_index_contracts_wasm_hash.sql  0009_wasm_interface_metadata_staging.sql
crates/db/src/: lib.rs  migrate.rs  persistence.rs  pool.rs  secrets.rs  soroban.rs
crates/domain/: Cargo.toml
crates/domain/src/: ledger.rs  lib.rs  soroban.rs  transaction.rs
crates/indexer/: Cargo.toml
crates/indexer/src/: lib.rs  main.rs
crates/indexer/src/handler/: convert.rs  mod.rs  persist.rs  process.rs
crates/xdr-parser/: Cargo.toml
crates/xdr-parser/src/: contract.rs  envelope.rs  error.rs  event.rs  invocation.rs  ledger_entry_changes.rs  lib.rs  memo.rs  nft.rs  operation.rs  scval.rs  state.rs  transaction.rs  types.rs  xdr_limits.rs
docs/architecture/: stellar-soroban-block-explorer-technical-design.md  technical-design-general-overview.md
docs/architecture/backend/: backend-overview.md
docs/architecture/database-schema/: database-schema-overview.md
docs/architecture/frontend/: frontend-overview.md
docs/architecture/indexing-pipeline/: indexing-pipeline-overview.md
docs/architecture/infrastructure/: infrastructure-overview.md
docs/architecture/xdr-parsing/: xdr-parsing-overview.md
docs/audits/: 2026-04-10-pipeline-data-audit.md
infra/: Makefile  README.md  cdk.json  eslint.config.mjs  package.json  tsconfig.lib.json
infra/aws-cdk/: Makefile  README.md  package.json  tsconfig.lib.json
infra/aws-cdk/envs/: production.json  staging.json
infra/aws-cdk/src/: index.ts
infra/envs/: production.json  staging.json
infra/src/: index.ts
infra/src/lib/: app.ts  bastion-app.ts  types.ts
libs/: README.md
libs/database/: drizzle.config.ts  package.json  tsconfig.lib.json  tsconfig.spec.json
libs/database/drizzle/: 0000_create_ledgers_transactions.sql
libs/database/src/: config.test.ts  config.ts  connection.ts  credentials.test.ts  credentials.ts  index.ts
libs/domain/: package.json
libs/domain/src/: index.ts
libs/shared/: package.json  tsconfig.spec.json
libs/shared/src/: error-handlers.test.ts  error-handlers.ts  errors.ts  index.ts
libs/ui/: package.json  tsconfig.lib.json  vite.config.ts
lore/: BOARD.md  CLAUDE.md  board.html
lore/0-session/: CLAUDE.md  team.yaml
lore/1-tasks/: CLAUDE.md  _note_template.md  _template.md
lore/1-tasks/active/: 0014_FEATURE_shared-error-types-parse-error.md  0016_FEATURE_db-schema-ledgers-transactions.md  0017_FEATURE_db-schema-operations.md  0018_FEATURE_db-schema-soroban-tables.md  0019_FEATURE_db-schema-tokens-accounts.md  0022_FEATURE_partition-management-automation.md  0024_FEATURE_xdr-parsing-ledgerclosemeta.md  0025_FEATURE_xdr-parsing-operations.md  0026_FEATURE_xdr-parsing-soroban-events-invocations.md  0027_FEATURE_xdr-parsing-ledger-entry-changes.md  0029_FEATURE_indexer-ledger-processor-handler.md  0032_FEATURE_cdk-rds-s3-secrets.md  0033_FEATURE_cdk-lambda-api-gateway.md  0034_FEATURE_cdk-ecs-fargate-galexie.md  0035_FEATURE_cdk-cloudfront-waf-route53.md  0036_FEATURE_cdk-cloudwatch-alarms.md  0037_FEATURE_cdk-eventbridge-xray.md  0039_FEATURE_cicd-github-actions.md  0042_FEATURE_openapi-swagger-infrastructure.md  0080_BUG_deploy-board-duplicate-artifacts.md  0081_BUG_fix-skills-structure-and-deploy-workflow.md  0083_FEATURE_remove-board-md-single-source-of-truth.md  0084_FEATURE_frontend-bootstrap-nx-scaffold.md  0085_REFACTOR_backlog-milestone-ordering.md  0094_REFACTOR_scaffold-cargo-workspace.md  0095_REFACTOR_monorepo-restructure.md  0097_FEATURE_cdk-api-gateway-waf.md  0098_REFACTOR_remove-event-interpreter-refs.md  0100_FEATURE_cdk-bastion-host-ssm-tunnel.md  0102_REFACTOR_rewrite-migrations-from-domain-types.md  0106_FEATURE_galexie-ecs-health-check.md  0107_BUG_api-custom-domain-dns-resolution.md  0108_FEATURE_galexie-ecs-health-check.md  CLAUDE.md  (+5 more)
lore/2-adrs/: 0002_rust-ledger-processor-lambda.md  0003_milestone-field-for-deliverable-ordering.md  0004_rust-only-xdr-parsing.md  0006_no-s3-lifecycle-on-ledger-data.md  0007_simplified-2-lambda-architecture.md  0008_error-envelope-and-pagination-shape.md  0009_staging-deploy-trigger-strategy.md  CLAUDE.md  _template.md
lore/3-wiki/: CLAUDE.md  partition-pruning-runbook.md  stellar-pubnet-ledger-archive.md
rust/: project.json
scripts/: staging-deploy.sh
tools/scripts/: db-tunnel.sh  explore-xdr.mjs  format-staged.mjs  generate-lore-board.mjs
tools/scripts/api-stack-test/: Cargo.toml
tools/scripts/api-stack-test/src/: cursor.rs  error.rs  ledgers.rs  main.rs  pagination.rs
web/: README.md  eslint.config.mjs  index.html  package.json  tsconfig.lib.json  vite.config.ts
web/src/: app.tsx  main.tsx
(+444 files in other folders)
