[package]
name = "api"
version = "0.1.0"
edition = "2021"
description = "REST API Lambda handler for the Soroban block explorer"

[[bin]]
name = "api"
path = "src/main.rs"

[dependencies]
domain = { path = "../domain" }
db = { path = "../db" }
axum = { workspace = true }
lambda_http = { workspace = true }
tower-http = { workspace = true }
utoipa = { workspace = true }
utoipa-axum = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
tower = "0.5"
