[package]
name = "api"
version = "0.1.0"
edition = "2024"
description = "REST API Lambda handler for the Soroban block explorer"

[[bin]]
name = "api"
path = "src/main.rs"

[features]
# Swagger UI is a ~12 MB embedded asset bundle. Gated behind an opt-in
# feature so production Lambda builds (`--no-default-features`) stay
# lean (~4 MB) while local/staging builds can enable the browser UI.
# The OpenAPI JSON (/api-docs-json) is always available — it only
# costs ~310 KB and is useful for external consumers.
default = []
swagger-ui = ["dep:utoipa-swagger-ui"]

[dependencies]
domain = { path = "../domain" }
db = { path = "../db" }
axum = { workspace = true }
lambda_http = { workspace = true }
tower-http = { workspace = true }
utoipa = { workspace = true }
utoipa-axum = { workspace = true }
utoipa-swagger-ui = { workspace = true, optional = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
tower = "0.5"
