[package]
name = "db-partition-mgmt"
version = "0.1.0"
edition = "2024"
description = "Partition management Lambda for the Soroban block explorer (CloudFormation custom resource + EventBridge)"

[[bin]]
name = "db-partition-mgmt"
path = "src/main.rs"

[dependencies]
db = { path = "../db", features = ["aws-secrets"] }
sqlx = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
lambda_runtime = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
aws-config = { workspace = true }
aws-sdk-cloudwatch = "1"
