[package]
name = "xdr-parser"
version = "0.1.0"
edition = "2024"
description = "LedgerCloseMeta XDR parser for the Soroban block explorer indexer"

[dependencies]
stellar-xdr = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }
zstd = { workspace = true }
tracing = { workspace = true }
