[package]
name = "api-poc"
version = "0.1.0"
edition = "2024"
description = "PoC: Rust API stack for Soroban Block Explorer (task 0092)"

[dependencies]
axum = "0.8"
lambda_http = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "json", "chrono", "migrate"] }
utoipa = { version = "5", features = ["axum_extras", "chrono"] }
utoipa-axum = "0.2" # not used in PoC directly but part of recommended stack (OpenApiRouter)
utoipa-swagger-ui = { version = "9", features = ["axum"] }
chrono = { version = "0.4", features = ["serde"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
base64 = "0.22"
thiserror = "2"
