[package]
name = "xdr-parser"
version = "0.1.0"
edition = "2021"
description = "LedgerCloseMeta XDR parser for the Soroban block explorer indexer"

[dependencies]
stellar-xdr = { version = "26", default-features = true, features = ["curr"] }
serde_json = "1.0"
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"
zstd = "0.13"
tracing = "0.1"

[dev-dependencies]
